# dev-digest

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  migrate_content_categories.py  migrate_database.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  smtp_test.py
app/: config.py  database.py  logging_config.py  main.py  middleware.py  models.py
app/services/: cache_service.py  digest_generator.py  email_service.py  fault_tolerance.py  github_service.py  monitoring_service.py  scheduler_service.py  stackoverflow_service.py  user_service.py
docker/: Dockerfile
migrations/: 001_initial.sql
scripts/: backup.py  deploy.py  generate_sample_data.py
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  index.html  login.html  settings.html  signup.htm  signup.html  unsubscribe.html
templates/admin/: dashboard.html  login.html
templates/email/: base_email.html  digest_email.html  welcome_email.html
tests/: test_api.py  test_integration.py  test_services.py
